Replace deprecated java.util.Locale constructors on factory methods (#8355)