@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2021 Oracle and/or its affiliates.
+ * Copyright (c) 2017, 2024 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -34,7 +34,7 @@ public class LocaleConfigMapper implements Function<Config, Locale> {
         String country = config.get("country").asString().orElse("");
         String variant = config.get("variant").asString().orElse("");
 
-        return new Locale(language, country, variant);
+        return Locale.of(language, country, variant);
     }
 
 }
